--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="AI-powered handwritten assignment generator. Type a prompt, get realistic handwritten pages with diagrams. Powered by Ollama." />
-  <title>HandCraft — AI Handwriting Generator</title>
+    content="HandCraft: The professional AI-powered handwritten assignment generator. Convert digital text to authentic handwriting with sketchy diagrams and custom styles." />
+  <meta name="keywords"
+    content="handwriting generator, AI handwriting, handwritten assignments, digital to handwriting, school assignments, AI diagrams" />
+  <meta name="author" content="HandCraft" />
+
+  <!-- OpenGraph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://thakuradithya12.github.io/HandCraft/" />
+  <meta property="og:title" content="HandCraft — Professional AI Handwriting Generator" />
+  <meta property="og:description"
+    content="Generate authentic handwritten assignments from digital text in seconds. High-quality paper output with AI diagrams." />
+  <meta property="og:image" content="https://thakuradithya12.github.io/HandCraft/og-image.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://thakuradithya12.github.io/HandCraft/" />
+  <meta property="twitter:title" content="HandCraft — Professional AI Handwriting Generator" />
+  <meta property="twitter:description"
+    content="Generate authentic handwritten assignments from digital text in seconds." />
+  <meta property="twitter:image" content="https://thakuradithya12.github.io/HandCraft/og-image.png" />
+
+  <title>HandCraft — AI Handwritten Assignment Generator</title>
+
+  <link rel="icon" type="image/svg+xml"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='20' fill='%235b6abf'/><text x='50' y='65' font-family='sans-serif' font-size='50' fill='white' text-anchor='middle' font-weight='bold'>H</text></svg>" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
