--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Kalam:wght@300;400;700&family=Indie+Flower&family=Homemade+Apple&family=Patrick+Hand&family=Dancing+Script:wght@400;500;600;700&family=Fredericka+the+Great&family=Architects+Daughter&family=Shadows+Into+Light+Two&family=Rock+Salt&family=Satisfy&family=Permanent+Marker&family=Inter:wght@300;400;500;600;700&display=swap"
     rel="stylesheet" />
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
